--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -21,8 +21,9 @@
 // Sections Styles
 @import "sections/_portfolio_hero";
 @import "sections/_portfolio_controls";
+@import "sections/_portfolio_gallery";
 @import "sections/_project_template";
 @import "sections/_about";
 
-// Grids Styles
-@import "grids/_all_filter";
+
+
