--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -13,6 +13,7 @@
 @import "components/_buttons";
 @import "components/_forms";
 @import "components/_navigation";
+@import "components/_template_nav";
 
 // Layout Styles
 @import "layout/_header";
